--- a/client/src/components/home/head/head.module.scss
+++ b/client/src/components/home/head/head.module.scss
@@ -1,5 +1,5 @@
-.home {
-  .home__wrapper {
+.head {
+  .head__wrapper {
     height: 90vh;
 
     display: flex;
@@ -18,6 +18,7 @@
     p {
       font-size: 40px;
       text-align: center;
+      margin-bottom: 25px;
     }
 
     a {
