--- a/client/src/components/footer/footer.module.scss
+++ b/client/src/components/footer/footer.module.scss
@@ -5,6 +5,11 @@
 .footer__wrapper {
   padding-top: 120px;
   padding-bottom: 65px;
+
+  @media (max-width: 768px) {
+    padding-top: 80px;
+    padding-bottom: 60px;
+  }
 }
 
 .footer__top {
@@ -24,6 +29,22 @@
       font-weight: 400;
       margin-top: 25px;
       text-transform: uppercase;
+
+      @media (max-width: 1220px) {
+        font-size: 80px;
+      }
+
+      @media (max-width: 890px) {
+        font-size: 64px;
+      }
+
+      @media (max-width: 620px) {
+        font-size: 48px;
+      }
+
+      @media (max-width: 420px) {
+        font-size: 68px;
+      }
     }
   }
 
@@ -35,13 +56,31 @@
       &:hover {
         color: var(--color-red);
       }
+
+      @media (max-width: 890px) {
+        width: 120px;
+        height: 120px;
+      }
     }
+  }
+
+  @media (max-width: 700px) {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    text-align: center;
+
+    gap: 20px;
   }
 }
 
 .footer__copyright {
   color: var(--color-white);
   margin-top: 65px;
+
+  border-top: 1px solid var(--color-white);
+  padding-top: 40px;
 
   display: flex;
   align-items: center;
@@ -81,6 +120,26 @@
       background: var(--color-white);
       transform: translateZ(-1px);
     }
+
+    @media (max-width: 1024px) {
+      display: none;
+    }
+
+    @media (max-width: 680px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      text-align: center;
+      padding: 15px;
+      gap: 10px;
+    }
+  }
+
+  @media (max-width: 680px) {
+    flex-direction: column;
+    justify-content: start;
+    align-items: start;
   }
 }
 
@@ -99,6 +158,26 @@
           text-decoration: underline;
         }
       }
+
+      @media (max-width: 780px) {
+        font-size: 14px;
+      }
     }
+
+    @media (max-width: 680px) {
+      flex-direction: column;
+      gap: 10px;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    justify-content: space-between;
+    width: 100%;
+  }
+
+  @media (max-width: 680px) {
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 40px;
   }
 }
