--- a/client/src/components/header/header.module.scss
+++ b/client/src/components/header/header.module.scss
@@ -3,7 +3,9 @@
 }
 
 .header__wrapper {
-  nav {
+  position: relative;
+
+  & > nav {
     ul {
       display: flex;
       justify-content: space-between;
@@ -19,5 +21,100 @@
         }
       }
     }
+
+    @media (max-width: 620px) {
+      display: none;
+    }
+  }
+}
+
+.header__menu {
+  display: none;
+
+  position: relative;
+
+  background: none;
+
+  width: 25px;
+  height: 15px;
+
+  &::before {
+    content: "";
+
+    position: absolute;
+
+    left: 0;
+    top: 0;
+
+    width: 100%;
+    height: 4px;
+
+    background: var(--color-blue);
+    transition: all 0.2s ease;
+  }
+
+  &::after {
+    content: "";
+
+    position: absolute;
+
+    bottom: 0;
+    left: 0;
+
+    width: 100%;
+    height: 4px;
+
+    background: var(--color-blue);
+
+    transition: all 0.2s ease;
+  }
+
+  @media (max-width: 620px) {
+    display: block;
+  }
+
+  &.active {
+    &::before {
+      transform: rotate(45deg);
+      background: var(--color-red);
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+      top: 0;
+      background: var(--color-red);
+    }
+  }
+}
+
+.header__menu__list {
+  display: none;
+
+  position: absolute;
+  top: 20px;
+
+  background: var(--color-white);
+  padding: 0 15px;
+  border: 1px solid var(--color-black);
+
+  nav {
+    ul {
+      li > a {
+        padding: 25px 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+      }
+
+      li {
+        &:not(:last-child) {
+          border-bottom: 1px solid var(--color-black);
+        }
+      }
+    }
+  }
+
+  @media (max-width: 620px) {
+    display: block;
   }
 }
