--- a/client/src/components/home/blog/blog.module.scss
+++ b/client/src/components/home/blog/blog.module.scss
@@ -61,11 +61,14 @@
   .blog__slide {
     border: 1px solid var(--color-black);
     padding: 5px;
-    width: 400px !important;
+    width: 100%;
+    height: auto;
+    box-sizing: border-box;
 
     .blog__item__header {
       display: flex;
       align-items: center;
+      justify-content: space-between;
 
       padding: 3px;
 
@@ -77,7 +80,7 @@
 
       margin-bottom: 5px;
 
-      p {
+      time {
         color: var(--color-white);
       }
 
@@ -102,6 +105,11 @@
       line-height: 110%;
     }
 
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+
     a {
       display: block;
       padding: 15px 15px;
@@ -120,15 +128,17 @@
         transition: all 0.2s ease;
       }
 
-      &:hover {
-        border: 2px solid var(--color-red);
+      @media (pointer: fine) {
+        &:hover {
+          border: 2px solid var(--color-red);
 
-        &::before {
-          background: var(--color-red);
-        }
+          &::before {
+            background: var(--color-red);
+          }
 
-        img {
-          transform: rotate(45deg);
+          img {
+            transform: rotate(45deg);
+          }
         }
       }
 
@@ -161,5 +171,9 @@
     );
 
     z-index: 2;
+
+    @media (max-width: 1024px) {
+      display: none;
+    }
   }
 }
