--- a/client/src/components/home/cases/cases.module.scss
+++ b/client/src/components/home/cases/cases.module.scss
@@ -24,6 +24,7 @@
 
   display: inline-block;
   white-space: nowrap;
+  overflow: hidden;
 
   h2 {
     color: var(--color-white);
@@ -38,6 +39,19 @@
 
     span {
       color: var(--color-black);
+    }
+
+    @media (max-width: 1024px) {
+      font-size: 120px;
+    }
+
+    @media (max-width: 768px) {
+      font-size: 80px;
+      margin: 0 20px;
+    }
+
+    @media (max-width: 425px) {
+      font-size: 70px;
     }
   }
 }
@@ -69,6 +83,10 @@
         p {
           font-family: "PixelUltima", sans-serif;
           color: var(--color-blue);
+
+          @media (max-width: 440px) {
+            font-size: 12px;
+          }
         }
 
         .cases__item__head__close {
@@ -78,6 +96,19 @@
           justify-content: center;
           align-items: center;
           border: 1px solid var(--color-white);
+        }
+
+        @media (max-width: 720px) {
+          background-position: -150px;
+        }
+
+        @media (max-width: 520px) {
+          background-image: url("/images/cases/header-bg-2.svg");
+          background-position: 0px;
+        }
+
+        @media (max-width: 440px) {
+          background-position: -100px;
         }
       }
     }
@@ -90,22 +121,67 @@
 
     &:nth-child(1) {
       margin-top: 80px;
+
+      @media (max-width: 1420px) {
+        margin-top: 0;
+      }
     }
 
     &:nth-child(2) {
       .cases__item__header {
-        background-image: url("/images/cases/header-bg-sm.svg");
+        background-position: -250px;
       }
     }
 
     &:nth-child(3) {
       .cases__item__header {
-        background-image: url("/images/cases/header-bg-sm.svg");
+        background-position: -250px;
       }
     }
 
     &:nth-child(4) {
       margin-top: 80px;
+
+      @media (max-width: 1420px) {
+        margin-top: 0;
+      }
+    }
+  }
+
+  @media (max-width: 1420px) {
+    flex-direction: column;
+    gap: 50px;
+
+    .cases__item__wrapper > img {
+      width: 100%;
+      height: 600px;
+      object-fit: cover;
+    }
+  }
+
+  @media (max-width: 960px) {
+    .cases__item__wrapper > img {
+      height: 500px;
+    }
+  }
+
+  @media (max-width: 720px) {
+    .cases__item__wrapper > img {
+      height: 350px;
+    }
+  }
+
+  @media (max-width: 520px) {
+    gap: 30px;
+
+    .cases__item__wrapper > img {
+      height: 250px;
+    }
+  }
+
+  @media (max-width: 440px) {
+    .cases__item__wrapper > img {
+      height: 200px;
     }
   }
 }
@@ -132,15 +208,17 @@
       transition: all 0.2s ease;
     }
 
-    &:hover {
-      border: 2px solid var(--color-red);
+    @media (pointer: fine) {
+      &:hover {
+        border: 2px solid var(--color-red);
 
-      &::before {
-        background: var(--color-red);
-      }
+        &::before {
+          background: var(--color-red);
+        }
 
-      img {
-        transform: rotate(45deg);
+        img {
+          transform: rotate(45deg);
+        }
       }
     }
 
@@ -153,6 +231,10 @@
       height: 100%;
       background: var(--color-white);
       z-index: -1;
+    }
+
+    @media (max-width: 720px) {
+      padding: 15px;
     }
   }
 }
