--- a/client/src/components/home/head/head.module.scss
+++ b/client/src/components/home/head/head.module.scss
@@ -8,52 +8,82 @@
     align-items: center;
 
     h1 {
-      font-size: 210px;
+      font-size: 205px;
       font-family: "PixelUltima", sans-serif;
       font-weight: 400;
       color: var(--color-blue);
       line-height: 100%;
+      text-align: center;
+
+      @media (max-width: 1440px) {
+        font-size: 200px;
+      }
+
+      @media (max-width: 1390px) {
+        font-size: 180px;
+      }
+
+      @media (max-width: 1280px) {
+        font-size: 160px;
+      }
+
+      @media (max-width: 1120px) {
+        font-size: 140px;
+      }
+
+      @media (max-width: 980px) {
+        font-size: 120px;
+      }
+
+      @media (max-width: 860px) {
+        font-size: 100px;
+      }
+
+      @media (max-width: 520px) {
+        font-size: 80px;
+      }
+
+      @media (max-width: 400px) {
+        font-size: 70px;
+      }
     }
 
     p {
       font-size: 40px;
       text-align: center;
       margin-bottom: 25px;
+
+      @media (max-width: 1390px) {
+        font-size: 32px;
+      }
+
+      @media (max-width: 980px) {
+        font-size: 28px;
+      }
+
+      @media (max-width: 860px) {
+        font-size: 24px;
+      }
+
+      @media (max-width: 520px) {
+        font-size: 20px;
+      }
+
+      @media (max-width: 400px) {
+        font-size: 18px;
+      }
     }
 
     a {
-      display: block;
       margin-top: 25px;
-      padding: 20px 15px;
-      background: var(--color-blue);
-      color: var(--color-white);
-      border: 2px solid var(--color-black);
-      position: relative;
 
-      transition: all 0.2s ease;
-
-      img {
-        transition: all 0.2s ease;
+      @media (max-width: 520px) {
+        margin-top: 15px;
       }
+    }
 
-      &:hover {
-        background: var(--color-red);
-
-        img {
-          transform: rotate(45deg);
-        }
-      }
-
-      &::before {
-        content: "";
-        position: absolute;
-        left: calc(-1 * 2px);
-        top: 20%;
-        width: calc(100% + 4px);
-        height: 100%;
-        background: var(--color-black);
-        z-index: -1;
-      }
+    @media (max-width: 768px) {
+      height: 70vh;
     }
   }
 }
