--- a/client/src/components/home/offer/offer.module.scss
+++ b/client/src/components/home/offer/offer.module.scss
@@ -65,6 +65,11 @@
 
         background-image: url("/icons/corner.svg");
       }
+
+      @media (max-width: 800px) {
+        width: 90%;
+        height: 80%;
+      }
     }
 
     .offer__title__corners_right {
@@ -76,7 +81,7 @@
         content: "";
         position: absolute;
 
-        left: 100%;
+        right: 0;
         top: 0;
 
         width: 32px;
@@ -91,7 +96,7 @@
         content: "";
         position: absolute;
 
-        left: 100%;
+        right: 0;
         bottom: 0;
 
         width: 32px;
@@ -100,6 +105,11 @@
         transform: rotate(180deg);
 
         background-image: url("/icons/corner.svg");
+      }
+
+      @media (max-width: 800px) {
+        width: 90%;
+        height: 80%;
       }
     }
 
@@ -110,10 +120,27 @@
       font-weight: 400;
       color: var(--color-white);
 
-      span {
+      em {
         color: var(--color-red);
       }
+
+      @media (max-width: 1140px) {
+        font-size: 52px;
+      }
+
+      @media (max-width: 960px) {
+        font-size: 42px;
+      }
+
+      @media (max-width: 720px) {
+        font-size: 36px;
+      }
     }
+  }
+
+  @media (max-width: 768px) {
+    padding-top: 80px;
+    padding-bottom: 80px;
   }
 }
 
@@ -123,11 +150,11 @@
 
     padding: 20px 16px;
     margin-top: 40px;
-    
+
     background: var(--color-blue);
     border: 2px solid var(--color-white);
     color: var(--color-white);
-    
+
     position: relative;
 
     transition: all 0.2s ease;
@@ -136,15 +163,17 @@
       transition: all 0.2s ease;
     }
 
-    &:hover {
-      border: 2px solid var(--color-red);
+    @media (pointer: fine) {
+      &:hover {
+        border: 2px solid var(--color-red);
 
-      &::before {
-        background: var(--color-red);
-      }
+        &::before {
+          background: var(--color-red);
+        }
 
-      img {
-        transform: rotate(45deg);
+        img {
+          transform: rotate(45deg);
+        }
       }
     }
 
@@ -158,6 +187,10 @@
       background: var(--color-white);
       z-index: -1;
       transition: all 0.2s ease;
+    }
+
+    @media (max-width: 520px) {
+      padding: 15px;
     }
   }
 }
