--- a/client/src/components/link/link.module.scss
+++ b/client/src/components/link/link.module.scss
@@ -12,11 +12,13 @@
     transition: all 0.2s ease;
   }
 
-  &:hover {
-    background: var(--color-red);
+  @media (pointer: fine) {
+    &:hover {
+      background: var(--color-red);
 
-    img {
-      transform: rotate(45deg);
+      img {
+        transform: rotate(45deg);
+      }
     }
   }
 
@@ -29,5 +31,9 @@
     height: 100%;
     background: var(--color-black);
     z-index: -1;
+  }
+
+  @media (max-width: 520px) {
+    padding: 14px 20px;
   }
 }
