--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -17,6 +17,8 @@
 
 html {
   box-sizing: border-box;
+  overflow-x: hidden !important;
+  width: 100%;
 }
 
 body {
@@ -75,7 +77,7 @@ footer {
 
 .container {
   max-width: 1460px;
-  padding: 0 10px;
+  padding: 0 20px;
   margin: 0 auto;
 }
 
