--- a/client/src/components/home/offer/offer.module.scss
+++ b/client/src/components/home/offer/offer.module.scss
@@ -24,6 +24,8 @@
   align-items: center;
 
   .offer__title {
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
     padding: 48px 64px;
     position: relative;
