--- a/client/src/components/home/clients/clients.module.scss
+++ b/client/src/components/home/clients/clients.module.scss
@@ -80,6 +80,7 @@
       img {
         @media (max-width: 980px) {
           width: 200px;
+          -o-object-fit: contain;
           object-fit: contain;
         }
 
@@ -132,6 +133,8 @@
 
   a {
     text-align: center;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
     width: fit-content;
   }
 }
