--- a/client/src/styles/_fonts.scss
+++ b/client/src/styles/_fonts.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "PixelUltima";
-  src: url("/fonts/pixel-ultima-regular.ttf") format("truetype");
+  src: url("/fonts/pixel-ultima-regular.woff2") format("woff2");
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "PixelUltima-bd";
-  src: url("/fonts/pixel-ultima-bold.ttf") format("truetype");
+  src: url("/fonts/pixel-ultima-bold.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
@@ -16,7 +16,7 @@
 
 @font-face {
   font-family: "IBMPlexMono";
-  src: url("/fonts/IBMPlexMono-Regular.ttf") format("truetype");
+  src: url("/fonts/IBMPlexMono-Regular.woff2") format("woff2");
   font-weight: 700;
   font-style: normal;
   font-display: swap;
